# console

./: CMakeLists.txt  LICENSE  README.md
cmake/: consoleConfig.cmake.in
lib/: CMakeLists.txt
lib/include/console/: basic_io.h  utility.h
lib/src/: basic_io.cpp  utility.cpp
